--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,22 @@
 Package: mongooser
-Version: 0.0.0.9000
 Title: A Port Of NodeJS 'Mongoose' In R
+Version: 0.0.0.9000
+Authors@R: c(
+    person("Colin", "Fay", , "contact@colinfay.me", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-7343-1846")),
+    person("ThinkR", role = "cph")
+  )
 Description: A Port of NodeJS 'Mongoose' in R.
-Authors@R: c(person(given = "Colin",
-         family = "Fay",
-         role = c("aut", "cre"),
-         email = "contact@colinfay.me",
-         comment = c(ORCID = "0000-0001-7343-1846")),
-  person(given = "ThinkR",
-         role = "cph"))
 License: MIT + file LICENSE
+Imports: 
+    jsonlite,
+    mongolite,
+    R6,
+    rlist
+Suggests: 
+    attempt,
+    testthat
+Config/fusen/version: 0.5.0.9001
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
